# Machine-Learning-Census-Project

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: streamlit_app.py
models/: lgbm_study.pkl  lgbm_tuned.pkl  logit_elasticnet.pkl  random_forest_tunned.pkl  xgb_model.pkl
notebooks/: Prediccion_Census_Modularizado.ipynb
scripts/: evaluate.py  train_all.py
src/census_ml/: __init__.py  config.py  data.py  ensemble.py  evaluation.py  inference.py  preprocessing.py
src/census_ml/models/: __init__.py  lightgbm_model.py  logistic.py  random_forest.py  xgboost_model.py
