[project]
name = "census-ml"
version = "0.1.0"
description = "Predicción de ingresos con Census Income KDD usando ensamble ponderado por AUC-PR"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
    { name = "Luis Jorge García Camargo", email = "luisjorgegarciacamargo@outlook.com" },
    { name = "Luis Eduardo Uribe" },
    { name = "Antonia Gacharna" },
    { name = "Felipe Barreto" },
    { name = "Victor Cantor" },
]
keywords = [
    "machine-learning",
    "classification",
    "imbalanced-data",
    "ensemble",
    "census",
    "uci",
]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "imbalanced-learn>=0.11",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "optuna>=3.4",
    "ucimlrepo>=0.0.7",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "joblib>=1.3",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.0",
    "ipykernel>=6.25",
    "nbconvert>=7.10",
    "ruff>=0.4",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
